# tensorflow-directml-plugin

./: .bazelrc  .clang-format  .gitignore  .pylintrc  BUILD.bazel  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  KERNEL_COOKBOOK.md  NOTICE.txt  README.md  SECURITY.md  WORKSPACE  build.py  format.ps1  format.sh  generate_op_defs_core.py  pyproject.toml  requirements.txt  result.txt  test.py  tfdml.def
.github/workflows/: github-actions-clang-format.yml  github-actions-cpp-check.yml  github-actions-nightly-build.yml  github-actions-pr-build.yml  github-actions-python-check.yml
cmake/: dependencies.cmake
containers/: tensorflow-directml-plugin-linux-cp37.DockerFile  tensorflow-directml-plugin-windows-cp37.DockerFile
pipelines/: CreateReportEmail.ps1  SubmitFilesToBlobStorage.ps1  build.yml  create_report_email.ps1  create_test_env.ps1  create_test_env.sh  create_test_matrix.ps1  create_test_summary_json.ps1  create_test_summary_xml.ps1  pipeline.yml  pr-pipeline.yml  pr_test.yml  report.yml  setup_agent_linux.yml  setup_agent_windows.yml  test-only.yml  test.yml
test/: README.md  run_tests.json  run_tests.py  sleep.py  test.py  tests.json  tests_schema.json
test/c/: c_api_tests.cc
test/example/: buggy.py  good_test.py  not_good_test.py  slow_test.py
test/ops/: adagrad_test.py  aggregate_ops_test.py  argmax_op_test.py  array_ops_test.py  batch_matmul_op_test.py  batchtospace_op_test.py  bias_op_base.py  bias_op_deterministic_test.py  bias_op_test.py  bitcast_op_test.py  cast_op_test.py  concat_op_test.py  constant_op_test.py  conv1d_test.py  conv1d_transpose_test.py  conv2d_backprop_filter_grad_test.py  conv2d_transpose_test.py  conv3d_backprop_filter_v2_grad_test.py  conv3d_transpose_test.py  conv_ops_3d_test.py  conv_ops_test.py  cross_device_ops_test.py  cross_grad_test.py  cudnn_recurrent_test.py  cwise_ops_binary_test.py  cwise_ops_test.py  cwise_ops_unary_test.py  data_format_op_test.py  deepcopy_op_test.py  depthtospace_op_test.py  depthwise_conv_op_test.py  diag_op_test.py  dml_get_adapter_name.py  dml_test_util.py  dynamic_stitch_op_test.py  empty_op_test.py  extract_image_patches_grad_test.py  extract_image_patches_op_test.py  extract_volume_patches_grad_test.py  extract_volume_patches_op_test.py  (+65 more)
test/plugin/: dml_multiple_devices_test.py  dml_visible_devices_test.py  profiler_test.py  sleep.py
test/profiler/: profiler.py
test/util/: generate_absl_test_summary.py
tests/: profiler.py
tfdml/: BUILD  tf_configure.bzl  tfdml.bzl  tfdml.natvis  workspace.bzl
tfdml/core/: BUILD  attribute.h  device.cc  dml_adapter.cc  dml_adapter.h  dml_adapter_heuristics.h  dml_adapter_impl.cc  dml_adapter_impl.h  dml_bfc_allocator.cc  dml_bfc_allocator.h  dml_buffer.cc  dml_buffer.h  dml_buffer_region.cc  dml_buffer_region.h  dml_command_allocator_ring.h  dml_command_list.cc  dml_command_list.h  dml_command_queue.cc  dml_command_queue.h  dml_common.h  dml_descriptor_bfc_allocator.cc  dml_descriptor_bfc_allocator.h  dml_descriptor_heap_allocator.cc  dml_descriptor_heap_allocator.h  dml_descriptor_pool.cc  dml_descriptor_pool.h  dml_device.cc  dml_device.h  dml_device_cache.cc  dml_device_cache.h  dml_device_context.cc  dml_device_context.h  dml_device_manager.cc  dml_device_manager.h  dml_device_state.cc  dml_device_state.h  dml_dso_loader.cc  dml_dso_loader.h  dml_error_handling.cc  dml_error_handling.h  (+49 more)
tfdml/data_format_ops_converter/: data_format_ops_converter.cc  data_format_ops_converter.h
tfdml/kernels/: BUILD  dml_addn_op.cc  dml_assign_variable_op.cc  dml_batch_norm_ops.cc  dml_batch_to_space_op.cc  dml_bias_add_op.cc  dml_bitcast_op.cc  dml_broadcast_to_op.cc  dml_cast_op.cc  dml_check_numerics_op.cc  dml_concat_op.cc  dml_conv_ops.cc  dml_crop_and_resize_grad_boxes_op.cc  dml_crop_and_resize_grad_image_op.cc  dml_crop_and_resize_op.cc  dml_cross_op.cc  dml_cudnn_rnn_ops.cc  dml_cwise_ops.cc  dml_data_format_dim_map.cc  dml_data_format_vec_permute.cc  dml_deepcopy_op.cc  dml_diag_op.cc  dml_diag_part_op.cc  dml_dynamic_stitch_op.cc  dml_empty_op.cc  dml_extract_image_patches_op.cc  dml_extract_patches_helpers.cc  dml_extract_patches_helpers.h  dml_extract_volume_patches_op.cc  dml_fill_op.cc  dml_gather_nd_op.cc  dml_gather_op.cc  dml_gru_ops.cc  dml_image_ops.cc  dml_in_topk_op.cc  dml_inplace_ops.cc  dml_kernel_wrapper.h  dml_l2loss_op.cc  dml_lrn_ops.cc  dml_lstm_helpers.h  (+50 more)
tfdml/layout_optimizer/: generic_layout_optimizer.cc  generic_layout_optimizer.h  scoped_data_format_upgrader.cc  scoped_data_format_upgrader.h  transpose_context.cc  transpose_context.h  transposer.cc  transposer.h  transposer_factory.cc  transposer_factory.h
tfdml/optimizer/: attr_value_util.cc  attr_value_util.h  byte_order.h  cast_remover.cc  cast_remover.h  data_format_ops_converter.cc  device_name_utils.cc  device_name_utils.h  device_placement_logger.cc  device_placement_logger.h  device_type.cc  device_type.h  dml_graph_optimizer.cc  dml_graph_optimizer.h  generic_layout_optimizer.cc  graph.h  graph_optimizer.h  graph_properties.cc  graph_properties.h  graph_view.cc  graph_view.h  graph_view_internal.h  grappler_item.cc  grappler_item.h  hash.cc  hash.h  map_utils.h  node_utils.cc  node_utils.h  op_registry.cc  op_registry.h  op_types.cc  op_types.h  optimizer_runner.cc  optimizer_runner.h  perm_utils.cc  perm_utils.h  proto_buffer_helpers.cc  proto_buffer_helpers.h  remapper.cc  (+15 more)
tfdml/plugin/: BUILD  plugin_data_format_ops_converter.cc  plugin_device.cc  plugin_kernel.cc  plugin_layout_optimizer.cc  plugin_optimizer.cc  plugin_profiler.cc  plugin_version.h
tfdml/runtime_adapter/: allocator.cc  allocator.h  allocator_retry.h  attribute.h  bcast.h  bfc_allocator.cc  bfc_allocator.h  determinism.cc  determinism.h  device.cc  device.h  env.cc  env.h  env_var.h  fused_eigen_output_kernels.cc  fused_eigen_output_kernels.h  guarded_philox_random.cc  guarded_philox_random.h  kernel_shape_util.cc  kernel_shape_util.h  macros.h  matmul_bcast.h  mirror_pad_mode.cc  mirror_pad_mode.h  node_def.h  numbers.cc  op_defs.h  op_defs_core.cc  op_defs_core.h  op_defs_dml.h  op_kernel.h  padding.h  (+40 more)
(+145 files in other folders)
